# research_manager_2.0

./: .gitignore  App.qml  CMakeLists.txt  README.md  ResearchManager.desktop  Workspace.qml  appicon.rc  main.cpp
.github/workflows/: release.yml
Backend/: aiconfig.cpp  aiconfig.h  applicationmanager.cpp  applicationmanager.h  backend.h  calendarview.cpp  calendarview.h  collaboratormodel.cpp  collaboratormodel.h  contactsmodel.cpp  contactsmodel.h  createproject.cpp  createproject.h  database.h  deadlinemodel.cpp  deadlinemodel.h  deadlineparser.cpp  deadlineparser.h  filedownloader.cpp  filedownloader.h  fileexplorer.cpp  fileexplorer.h  filelistviewer.cpp  filelistviewer.h  homepage.cpp  homepage.h  linkviewer.cpp  linkviewer.h  messageviewer.cpp  messageviewer.h  projectpage.cpp  projectpage.h  taskmanger.cpp  taskmanger.h  templatemanager.cpp  templatemanager.h  workspacemodel.cpp  workspacemodel.h
ResearchManager/: AiConfig.qml  ContactList.qml  FilesPanel.qml  HomePage.qml  HomeProjects.qml  ProfileView.qml  RecentProjects.qml  Settings.qml  SideMenu.qml  qmldir
ResearchManager/ProjectComponents/: CalendarView.qml  CitationView.qml  CollaboratorView.qml  ContactsViewer.qml  DeadlineView.qml  FileViewer.qml  FolderViewer.qml  HeaderTile.qml  LinkView.qml  NavBar.qml  NoteViewer.qml  TabView.qml  TagViewer.qml  TaskViewer.qml  qmldir
ResearchManager/SettingComponents/: CreateWorkspace.qml  TemplateManager.qml  WorkspaceManager.qml
ResearchManager/images/: ResearchManager.icns
Test/: common_config.db  test_DeadlineParser.cpp  test_NetwrokManager.cpp  tst_database.cpp
app/: app_maker.sh  linux_github_release.sh
